[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/StatsContainer"]
layout_mode = 2
text = "HP: 100/100"

[node name="LevelLabel" type="Label" parent="MarginContainer/StatsContainer"]
layout_mode = 2
text = "Level: 1"

[node name="ExpLabel" type="Label" parent="MarginContainer/StatsContainer"]
layout_mode = 2
text = "EXP: 0/100"
